--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^11.3.2"
+  },
+  "devDependencies": {
+    "dotenv": "^5.0.1"
   }
 }
